--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="A"
+            android:backgroundTint="@color/teal_200"
             tools:layout_editor_absoluteX="27dp"
             tools:layout_editor_absoluteY="26dp" />
 
