--- a/app/src/main/res/layout/add_equipament_bottomsheet_fragment.xml
+++ b/app/src/main/res/layout/add_equipament_bottomsheet_fragment.xml
@@ -35,12 +35,12 @@
         app:layout_constraintStart_toStartOf="@+id/edt_equipamentName"
         app:layout_constraintTop_toBottomOf="@+id/edt_equipamentName" />
 
-    <EditText
-        android:id="@+id/edt_equipamentCategory"
+    <Spinner
+        android:id="@+id/spinner_category"
         android:layout_width="100dp"
         android:textAllCaps="true"
         android:gravity="center"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/edt_background"
